--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -1,3 +1,24 @@
-<button onclick="window.ipc.postMessage('new-window')">Open a new window</button>
-<button onclick="window.ipc.postMessage('close')">Close current window</button>
+<h1>Settings Window</h1>
+
+<hr />
+
+<h3>Change Window Title</h3>
 <input oninput="window.ipc.postMessage(`change-title:${this.value}`)" />
+
+<hr />
+
+<h3>Open Link</h3>
+<input id="url"/>
+<button onclick="openUrl()">Open</button>
+
+<script>
+    const url = document.getElementById("url");
+    function openUrl(){
+        window.ipc.postMessage(`open-link:${url.value}`)
+    }
+</script>
+
+<hr />
+
+<h3>Close</h3>
+<button onclick="window.ipc.postMessage('close')">Close current window</button>
